2006-11-12	Benedikt Meurer <benny@xfce.org>

	* xfsm-shutdown-helper/main.c: Apply patch from Francis Gudin
	  <fgudin@nerim.net> to fix poweroff on DragonFly BSD. Bug #2567.

2006-11-04	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-11-04	Benedikt Meurer <benny@xfce.org>

	* === Released 4.3.99.2 ===
	* NEWS, configure.in.in: Bump version.
	* configure.in.in: Update dependencies.
	* po/*.po: Update Project-Id-Version.
	* xfce4-tips/data/tips.dat: Regenerate the Tips'n'Tricks database.

2006-11-04	Jean-François Wauthy <pollux@xfce.org>

	* xfce4-tips/data/tips: Remove references to xftaskbar4 and
	  xfce4-iconbox and rename xffm to Thunar. Bug #1332.

2006-10-28	Benedikt Meurer <benny@xfce.org>

	* xfce4-session.rc: Be sure to start Thunar prior to xfdesktop on
	  first login to avoid the trash error from xfdesktop if the session
	  bus is not configured properly. Bug #2447.

2006-09-13	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/xfsm-startup.c(xfsm_startup_continue_session): Fix
	  argv array allocation. Bug #2315.

2006-09-13	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/xfsm-splash-screen.c: Drop GLib 2.2 compat code.
	* configure.in.in, xfce4-session/xfsm-manager.{c,h},
	  xfce4-session/xfsm-startup.c: Handle failed applications faster on
	  session startup and reduce the overhead caused by handing them over
	  to init.

2006-09-09	Benedikt Meurer <benny@xfce.org>

	* README, configure.in.in, xfce4-session/: Merge the sudo and the HAL
	  shutdown helpers into a single shutdown helper, which tries to use
	  HAL first, and falls back to sudo.

2006-09-02	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-09-02	Benedikt Meurer <benny@xfce.org>

	* === Released 4.3.99.1 ===
	* NEWS, configure.in.in: Bump version.
	* po/*.po: Update Project-Id-Version.

2006-08-30	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, xfce4-session/xfsm-compat-gnome.c: Support for