@@ -1,3 +1,10 @@
+2006-12-21	Benedikt Meurer <benny@xfce.org>
+
+	* libxfsm/xfsm-util.c, xfce4-session/shutdown.c: Apply Jasper's patch
+	  to drop the old-style header from the logout dialog. Bug #2653.
+	* xfce4-session/xfsm-fadeout.c: Use Xrender to fadeout the background
+	  if cairo is available, as it gives better results.
+
 2006-11-12	Benedikt Meurer <benny@xfce.org>
 
 	* xfsm-shutdown-helper/main.c: Apply patch from Francis Gudin
